# csboard-svn

branches/nsh/csboard/help/: Makefile.am
branches/nsh/csboard/po/: POTFILES.in  ru.po
branches/nsh/csboard/resource/: csboard.glade
branches/nsh/csboard/src/: App.cs  Board.cs  Gettext.cs  ICS.cs  ICSSeek.cs  Phalanx.cs  Position.cs  Promotion.cs  Window.cs
tags/CSBOARD_0_7/csboard/: .cvsignore  ChangeLog  Makefile.am  TODO  configure.in
tags/CSBOARD_0_7/csboard/data/: csboard.schemas.in  csboard.spec.in  csviewer.desktop.in  csviewer.in
tags/CSBOARD_0_7/csboard/po/: ChangeLog  te.po
tags/CSBOARD_0_7/csboard/resource/: Makefile.am  csboard.glade
tags/CSBOARD_0_7/csboard/src/: App.cs  GnuChess.cs  (+2 more)
tags/CSBOARD_0_9/: AUTHORS  ChangeLog  NEWS  README  autogen.sh  config.cs.in  configure.in
tags/CSBOARD_0_9/data/: csboard.desktop.in  csboard.schemas.in  csplayer.desktop.in  csviewer.in
tags/CSBOARD_0_9/data/debian/: copyright  csboard.1
tags/CSBOARD_0_9/help/: csboard.omf.in
tags/CSBOARD_0_9/help/C/: csboard.xml
tags/CSBOARD_0_9/po/: te.po
tags/CSBOARD_0_9/resource/: Makefile.am
tags/CSBOARD_0_9/src/: AppMenuBar.cs  ChessClock.cs  ChessGameWidget.cs  Figure.cs  ICSClient.cs  NullControl.cs  Promotion.cs  Session.cs
tags/CSBOARD_0_9/src/game/: Bishop.cs  Queen.cs
tags/CSBOARD_0_9/src/ics/: CommandSender.cs  GameInfo.cs  Graph.cs  ICSClient.cs  ICSConfigDialog.cs  ICSDetailsWidget.cs  ICSSeek.cs  MovesGetter.cs  ObservableGamesWidget.cs  ObservingGamePage.cs
tags/CSBOARD_0_9/src/parser/: PGNGameLoader.cs
tags/CSBOARD_0_9/src/viewer/: ChessGame.cs  GameSession.cs  GameViewer.cs  GameViewerUI.cs  IEcoDb.cs  PGNBufferLoader.cs  PluginManagerDialog.cs  ViewerBoard.cs
tags/CSBOARD_0_9/src/viewer/Widgets/: CairoViewerBoard.cs  ChessGameWidget.cs  GameViewerWidget.cs
tags/CSBOARD_0_9/src/viewer/plugins/ecodb/: Makefile.am  OpeningBrowserUI.cs  OpeningsDb.cs
tags/CSBOARD_0_9/src/viewer/plugins/gamedb/: GameDb.cs  GameDbBrowser.cs  GameDbBrowserUI.cs  GamesEditorDialog.cs
tags/CSBOARD_0_9/src/viewer/plugins/printer/: Makefile.am  PGNExporter.cs  PrintWrapper.cs
tags/CSBOARD_0_9/src/viewer/plugins/urlloader/: PGNUrlLoader.cs
tags/start/csboard/: INSTALL  NEWS  TODO  configure.in
tags/start/csboard/data/: csboard.in  csboard.schemas.in
tags/start/csboard/help/C/: csboard-C.omf  csboard.xml
tags/start/csboard/images/: AUTHOR
tags/start/csboard/src/: Book.cs  Figure.cs  GnuChess.cs  ICSClient.cs  IControl.cs
trunk/csboard/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  autogen.sh  build.bat  config.cs.in  configure.in
trunk/csboard/data/: .cvsignore  Makefile.am  csboard.cmbx  csboard.desktop.in  csboard.in  csboard.prjx  csboard.schemas.in  csplayer.in  csviewer.desktop.in  csviewer.in
trunk/csboard/data/debian/: changelog  rules
trunk/csboard/help/: Makefile.am  xmldocs.make
trunk/csboard/help/C/: csboard.xml
trunk/csboard/po/: .cvsignore  ChangeLog  POTFILES.in  cs.po  csboard.pot  ru.po  te.po  tr.po
trunk/csboard/resource/: csboard.glade  csviewer.glade
trunk/csboard/src/: App.cs  AppMenuBar.cs  Board.cs  Book.cs  CairoBoard.cs  CairoPlayerBoard.cs  ChessClock.cs  ChessGameWidget.cs  ChessWindowUI.cs  ColorProvider.cs  Crafty.cs  DummySession.cs  Figure.cs  FigureManager.cs  FileChooser.cs  GnuChess.cs  ICS.cs  ICSClient.cs  ICSSeek.cs  IControl.cs  Phalanx.cs  PlayerBoard.cs  Position.cs  ProgressBar.cs  Promotion.cs  Session.cs  SubApp.cs  Window.cs
trunk/csboard/src/game/: CannotMoveException.cs  ChessException.cs  ChessGamePlayer.cs  ChessPiece.cs  ChessSide.cs  InvalidMoveException.cs  Pawn.cs  Utils.cs
trunk/csboard/src/ics/: ChessMovesWidget.cs  CommandSender.cs  GameAdvertisement.cs  GameAdvertisementGraph.cs  GameAdvertisements.cs  GameAdvertisementsWidget.cs  GameDetails.cs  GameInfo.cs  GameObservationManager.cs  Graph.cs  ICS.cs  ICSClient.cs  ICSConfigDialog.cs  ICSConfigWidget.cs  ICSDetailsWidget.cs  ICSDetailsWindow.cs  ICSGameObserverWidget.cs  ICSGameObserverWindow.cs  ICSParser.cs  ICSSeek.cs  ICSShell.cs  MatchChallenge.cs  MoveDetails.cs  MovesGetter.cs  ObservableGamesWidget.cs  ObservingGamePage.cs  ParserUtils.cs  PlayerPage.cs  RelayGame.cs  RelayGamesGetter.cs  RelayGetter.cs  RelayTournament.cs  RelayTournamentsGetter.cs  ResultNotification.cs
trunk/csboard/src/ics/UI/: ChessMovesWidget.cs  ICSConfigDialog.cs  ICSConfigWidget.cs  ICSDetailsWidget.cs  ICSMenuBar.cs  ICSShell.cs  NotificationWidget.cs  ObservableGamesWidget.cs  ObservingGamePage.cs  PlayerPage.cs  RelayTournamentsView.cs  ShellTextView.cs
trunk/csboard/src/ics/relay/: RelayGetter.cs  RelayTournament.cs
trunk/csboard/src/parser/: PGNChessGame.cs  PGNChessMove.cs  PGNGameLoader.cs  PGNNAG.cs  PGNParser.cs  PGNTag.cs  PGNTokenizer.cs
trunk/csboard/src/players/: GnuChess1.cs  ProcIO.cs
trunk/csboard/src/viewer/: BufferDialog.cs  CachingFigure.cs  CairoPositionSnapshot.cs  CairoViewerBoard.cs  ChessGame.cs  ChessGameInfoWidget.cs  ChessGameView.cs  ChessGameWidget.cs  GameSession.cs  GameViewer.cs  GameViewerUI.cs  GamesListWidget.cs  IEcoDb.cs  Makefile.am  PGNBufferLoader.cs  PGNExporter.cs  PGNFileLoader.cs  PGNGameDetails.cs  PGNTree.cs  PluginManager.cs  PluginManagerDialog.cs  PositionSnapshot.cs  PrintWrapper.cs  ViewerBoard.cs  ViewerMenuBar.cs
trunk/csboard/src/viewer/Widgets/: CairoViewerBoard.cs  ChessGameBoard.cs  ChessGameView.cs  ChessGameWidget.cs  GameViewerWidget.cs  GamesListWidget.cs
trunk/csboard/src/viewer/plugins/: EcoDBPlugin.cs  Makefile.am  OpeningsDb.cs  PGNExporter.cs  PGNPrinterPlugin.cs  PGNUrlLoader.cs  PrintWrapper.cs
trunk/csboard/src/viewer/plugins/ecodb/: EcoDBPlugin.cs  Makefile.am  OpeningBrowserUI.cs  OpeningsDb.cs
trunk/csboard/src/viewer/plugins/gamedb/: GameDb.cs  GameDbBrowser.cs  GameDbPlugin.cs  GamesCollectionDialog.cs  GamesEditorDialog.cs  Makefile.am  PGNGameDetails.cs  gamedb.glade
trunk/csboard/src/viewer/plugins/printer/: Makefile.am  PGNExporter.cs  PGNPrinterPlugin.cs  PrintWrapper.cs
trunk/csboard/src/viewer/plugins/urlloader/: Makefile.am  PGNUrlLoader.cs
(+21 files in other folders)
