# Process this file with autoconf to produce a configure script.
AC_INIT([csboard], [0.9], [nshmyrev@yandex.ru])
AM_INIT_AUTOMAKE

#This is a requirement for gettext and future use
AC_PROG_CC

#Internationalization

AC_PROG_INTLTOOL([0.30])
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
ALL_LINGUAS="cs ru tr te"
AM_GLIB_GNU_GETTEXT

# Dependencies

GTKSHARP_REQUIRED_VERSION=2.8.0

dnl C# compiler
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, mcs, no)
AC_PATH_PROG(MONO, mono, no)

CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno" ; then
	dnl AC_MSG_ERROR([You need to install a C# compiler])
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

if test "x$MONO" = "xno"; then
	AC_MSG_ERROR([No mono runtime found])
fi

AC_ARG_ENABLE(windows,
	[ --enable-windows For windows],
	[case "${enableval}" in
	      yes) windows=true ;;
	      no) windows=false ;;
	      *) AC_MSG_ERROR(bad value for ${enableval} for --enable-windows) ;;
	esac],
	[enable=false])

if test "x$windows" != "xtrue"; then
windows=false
fi

AM_CONDITIONAL(WINDOWS_BUILD, test x$windows = xtrue)
AC_SUBST(windows)

PKG_CHECK_MODULES(BASE_DEPENDENCIES,
gtk-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
glade-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
rsvg-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
gconf-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
)

AC_SUBST(MCS)
AC_SUBST(BASE_DEPENDENCIES_LIBS)

PKG_CHECK_MODULES(URL_LOADER_PLUGIN,
gnome-sharp-2.0 >= $GTKSHARP_REQUIRED_VERSION
)
AC_SUBST(URL_LOADER_PLUGIN_LIBS)


AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

GNOME_DOC_INIT

AC_CONFIG_FILES([
    Makefile
    data/Makefile
    data/csboard
    data/csplayer
    data/csviewer
    data/csboard.spec
    help/Makefile
    po/Makefile.in
    src/Makefile
    src/viewer/Makefile
    src/viewer/plugins/Makefile
    src/viewer/plugins/urlloader/Makefile
    src/viewer/plugins/printer/Makefile
    src/viewer/plugins/ecodb/Makefile
    src/viewer/plugins/gamedb/Makefile
    resource/Makefile
    config.cs
    ])

AC_OUTPUT

