# Process this file with autoconf to produce a configure script.
AC_INIT([csboard], [0.5], [nshmyrev@yandex.ru])
AM_INIT_AUTOMAKE

#This is a requirement for gettext and future use
AC_PROG_CC

#Internationalization

AC_PROG_INTLTOOL([0.30])
GETTEXT_PACKAGE=AC_PACKAGE_NAME
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")
ALL_LINGUAS="ru"
AM_GLIB_GNU_GETTEXT

# Dependencies

MONO_REQUIRED_VERSION=0.95
GTKSHARP_REQUIRED_VERSION=0.93

PKG_CHECK_MODULES(MONO,
mono >= $MONO_REQUIRED_VERSION
)

PKG_CHECK_MODULES(BASE_DEPENDENCIES,
gtk-sharp >= $GTKSHARP_REQUIRED_VERSION
glade-sharp >= $GTKSHARP_REQUIRED_VERSION
rsvg-sharp >= $GTKSHARP_REQUIRED_VERSION
gconf-sharp >= $GTKSHARP_REQUIRED_VERSION
)
AC_SUBST(BASE_DEPENDENCIES_LIBS)

AC_PATH_PROG(GCONFTOOL, gconftool-2)
AM_GCONF_SOURCE_2

AC_CONFIG_FILES([
    Makefile
    data/Makefile
    data/csboard
    data/csboard.spec
    po/Makefile.in
    config.cs
    help/Makefile
    help/C/Makefile
    ])

AC_OUTPUT

