include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = csboard
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/app.png \
	figures/bishop.png \
	figures/book.png \
	figures/castle-after.png \
	figures/castle-before.png \
	figures/en_passant.png \
	figures/king.png \
	figures/knight.png \
	figures/pawn.png \
	figures/queen.png \
	figures/rook.png \
	figures/start_position.png

DOC_LINGUAS =
